Swithching to env to runtime

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: safetyapp
-    env: node
+    runtime: node
     plan: starter
     rootDir: goodmen-logistics
     buildCommand: cd frontend && npm install && npm run build && cd ../backend && npm install
@@ -18,7 +18,7 @@ services:
 
   - type: worker
     name: goodmen-logs-mcp
-    env: node
+    runtime: node
     plan: starter
     rootDir: goodmen-logs-mcp-server
     buildCommand: npm install && npm run build
@@ -28,4 +28,4 @@ databases:
   - name: safetyapp-db
     databaseName: goodmen_logistics
     user: goodmen_user
-    plan: starter
+    plan: basic-256mb
