--- a/goodmen-logs-mcp-server/package.json
+++ b/goodmen-logs-mcp-server/package.json
@@ -13,13 +13,19 @@
     "watch": "tsc --watch",
     "dev": "npm run build && node build/index.js"
   },
-  "keywords": ["mcp", "confluence", "logs", "monitoring"],
+  "keywords": [
+    "mcp",
+    "confluence",
+    "logs",
+    "monitoring"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
     "axios": "^1.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "express": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
