--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: PORT
         value: 10000
 
-  - type: worker
+  - type: web
     name: goodmen-logs-mcp
     runtime: node
     plan: starter
