changing how we retrive the logs

--- a/goodmen-logs-mcp-server/.env.example
+++ b/goodmen-logs-mcp-server/.env.example
@@ -2,7 +2,7 @@
 CONFLUENCE_BASE_URL=https://nebget101.atlassian.net
 CONFLUENCE_EMAIL=nebget101@gmail.com
 CONFLUENCE_API_TOKEN=your_confluence_api_token
-CONFLUENCE_SPACE_KEY=SAFETYAPP
+CONFLUENCE_SPACE_KEY=SA
 
 # Goodmen Logistics Backend Path (URL where your backend is running)
 BACKEND_PATH=https://safetyapp-ln58.onrender.com
