--- a/jira-mcp-server/.env.example
+++ b/jira-mcp-server/.env.example
@@ -5,7 +5,13 @@ JIRA_API_TOKEN=ATATT3xFfGF0uEG1uylAoiX88kgadPCMWuG0siMGrSZ8K-g3g_dZGoQLShu_toi1E
 JIRA_PROJECT_KEY=KAN
 
 # Codebase Configuration
-WORKSPACE_PATH=/Users/nebyougetaneh/Desktop/SafetyApp/goodmen-logistics
+WORKSPACE_PATH=/Users/nebyougetaneh/Desktop/SafetyApp
 
 # Test Results Path
-TEST_RESULTS_PATH=/Users/nebyougetaneh/Desktop/SafetyApp/k6-performance-tests/reports
+TEST_RESULTS_PATH=/Users/nebyougetaneh/Desktop/SafetyApp/goodmen-logistics/cypress-tests/cypress
+
+# Confluence Configuration (Optional - for test report documentation)
+CONFLUENCE_BASE_URL=https://nebget101.atlassian.net
+CONFLUENCE_EMAIL=nebget101@gmail.com
+CONFLUENCE_API_TOKEN=ATATT3xFfGF0uEG1uylAoiX88kgadPCMWuG0siMGrSZ8K-g3g_dZGoQLShu_toi1EwvL0nknasjAdBbpC0x9zb-39zCcEOF038C_O7NQYJtLddNcdAoGCUap0JxZTR3TSupoo01RSBfLlMTKFKPvxZ-TO69ADn4cVY6a6QRxlBGO51wcnt6iD7o=4AEA100D
+CONFLUENCE_SPACE_KEY=~YOUR_SPACE_KEY
