feat: add MCP HTTP Gateway and security hardening
- Add mcp-http-gateway: unified REST API for GitHub, Confluence, Jira, Logs
- Add github-mcp-server: MCP server for GitHub Actions automation
- Security: remove all sensitive tokens from codebase
- Security: all tokens now managed via environment variables
- Add SECURITY.md with comprehensive security guidelines
- Update render.yaml with mcp-http-gateway service configuration
- All .env files use placeholders, actual tokens in Render dashboard only

--- a/goodmen-logs-mcp-server/.env.example
+++ b/goodmen-logs-mcp-server/.env.example
@@ -1,11 +1,11 @@
 # Confluence Configuration
-CONFLUENCE_BASE_URL=https://nebget101.atlassian.net
-CONFLUENCE_EMAIL=nebget101@gmail.com
+CONFLUENCE_BASE_URL=https://your-domain.atlassian.net/wiki
+CONFLUENCE_EMAIL=your_email@example.com
 CONFLUENCE_API_TOKEN=your_confluence_api_token
-CONFLUENCE_SPACE_KEY=SA
+CONFLUENCE_SPACE_KEY=YOUR_SPACE_KEY
 
 # Goodmen Logistics Backend Path (URL where your backend is running)
-BACKEND_PATH=https://safetyapp-ln58.onrender.com
+BACKEND_PATH=https://your-backend.onrender.com
 
 # Optional: Server logs file path (if you want to read from a log file)
-LOG_FILE_PATH=/Users/nebyougetaneh/Desktop/SafetyApp/goodmen-logistics/backend/logs/app.log
+LOG_FILE_PATH=/path/to/your/logs/app.log
