--- a/jira-mcp-server/.env.example
+++ b/jira-mcp-server/.env.example
@@ -1,17 +1,17 @@
 # Jira Configuration
-JIRA_BASE_URL=https://nebget101.atlassian.net
-JIRA_EMAIL=nebget101@gmail.com
-JIRA_API_TOKEN=ATATT3xFfGF0uEG1uylAoiX88kgadPCMWuG0siMGrSZ8K-g3g_dZGoQLShu_toi1EwvL0nknasjAdBbpC0x9zb-39zCcEOF038C_O7NQYJtLddNcdAoGCUap0JxZTR3TSupoo01RSBfLlMTKFKPvxZ-TO69ADn4cVY6a6QRxlBGO51wcnt6iD7o=4AEA100D
-JIRA_PROJECT_KEY=KAN
+JIRA_BASE_URL=https://your-domain.atlassian.net
+JIRA_EMAIL=your_email@example.com
+JIRA_API_TOKEN=your_jira_api_token_here
+JIRA_PROJECT_KEY=YOUR_PROJECT_KEY
 
 # Codebase Configuration
-WORKSPACE_PATH=/Users/nebyougetaneh/Desktop/SafetyApp
+WORKSPACE_PATH=/path/to/your/workspace
 
 # Test Results Path
-TEST_RESULTS_PATH=/Users/nebyougetaneh/Desktop/SafetyApp/goodmen-logistics/cypress-tests/cypress
+TEST_RESULTS_PATH=/path/to/your/test/results
 
 # Confluence Configuration (Optional - for test report documentation)
-CONFLUENCE_BASE_URL=https://nebget101.atlassian.net
-CONFLUENCE_EMAIL=nebget101@gmail.com
-CONFLUENCE_API_TOKEN=ATATT3xFfGF0uEG1uylAoiX88kgadPCMWuG0siMGrSZ8K-g3g_dZGoQLShu_toi1EwvL0nknasjAdBbpC0x9zb-39zCcEOF038C_O7NQYJtLddNcdAoGCUap0JxZTR3TSupoo01RSBfLlMTKFKPvxZ-TO69ADn4cVY6a6QRxlBGO51wcnt6iD7o=4AEA100D
-CONFLUENCE_SPACE_KEY=~YOUR_SPACE_KEY
+CONFLUENCE_BASE_URL=https://your-domain.atlassian.net/wiki
+CONFLUENCE_EMAIL=your_email@example.com
+CONFLUENCE_API_TOKEN=your_confluence_api_token_here
+CONFLUENCE_SPACE_KEY=YOUR_SPACE_KEY
