feat: add Load model and initial assets
- Created Load model interface with various properties for logistics management.
- Added SVG logo for Goodmen Logistics.
- Included JPEG and PNG versions of the Goodmen logo.
- Set up Knex configuration for PostgreSQL with development, staging, and production environments.
- Created migration files for user table and example column.
- Initialized package.json and package-lock.json with necessary dependencies for bcrypt and jsonwebtoken.

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,26 @@ services:
         fromDatabase:
           name: safetyapp-db
           property: connectionString
+      - key: PG_DATABASE
+        fromDatabase:
+          name: safetyapp-db
+          property: databaseName
+      - key: PG_USER
+        fromDatabase:
+          name: safetyapp-db
+          property: user
+      - key: PG_PASSWORD
+        fromDatabase:
+          name: safetyapp-db
+          property: password
+      - key: PG_HOST
+        fromDatabase:
+          name: safetyapp-db
+          property: host
+      - key: PG_PORT
+        fromDatabase:
+          name: safetyapp-db
+          property: port
       - key: NODE_ENV
         value: production
       - key: PORT
