fix: update database property reference for PG_DATABASE in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
       - key: PG_DATABASE
         fromDatabase:
           name: safetyapp-db
-          property: databaseName
+          property: database
       - key: PG_USER
         fromDatabase:
           name: safetyapp-db
