--- a/goodmen-logistics/backend/package.json
+++ b/goodmen-logistics/backend/package.json
@@ -20,6 +20,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.3",
     "@dynatrace/oneagent-sdk": "^1.5.0",
     "axios": "^1.13.4",
     "body-parser": "^1.20.2",
@@ -27,10 +29,10 @@
     "dotenv": "^17.2.4",
     "express": "^4.18.2",
     "multer": "^2.0.2",
-    "pg": "^8.18.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "knex": "^3.1.0"
   }
 }
