--- a/goodmen-logistics/backend/package.json
+++ b/goodmen-logistics/backend/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
+    "knex": "^3.1.0",
     "@dynatrace/oneagent-sdk": "^1.5.0",
     "axios": "^1.13.4",
     "body-parser": "^1.20.2",
@@ -34,7 +35,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "knex": "^3.1.0"
+    "nodemon": "^3.0.1"
   }
 }
