--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.13.5",
     "bcrypt": "^6.0.0",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "knex": "^3.1.0",
