--- a/goodmen-logistics/backend/package.json
+++ b/goodmen-logistics/backend/package.json
@@ -21,17 +21,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^6.0.0",
-    "jsonwebtoken": "^9.0.3",
-    "pg": "^8.18.0",
-    "knex": "^3.1.0",
     "@dynatrace/oneagent-sdk": "^1.5.0",
     "axios": "^1.13.4",
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
+    "knex": "^3.1.0",
     "multer": "^2.0.2",
+    "pdfkit": "^0.16.0",
+    "pg": "^8.18.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
