--- a/goodmen-logistics/backend/package.json
+++ b/goodmen-logistics/backend/package.json
@@ -33,7 +33,8 @@
     "multer": "^2.0.2",
     "pdfkit": "^0.16.0",
     "pg": "^8.18.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
