--- a/goodmen-logistics/frontend/package.json
+++ b/goodmen-logistics/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -27,6 +28,7 @@
     "@angular/cli": "^17.0.0",
     "@angular/compiler-cli": "^17.0.0",
     "@types/node": "^18.0.0",
+    "@types/qrcode": "^1.5.6",
     "typescript": "~5.2.2"
   }
 }
